tests/sksl/errors/InterfaceBlockWithNoMembers.glsl
### Compilation failed:

error: 1: interface block 'S' must contain at least one field
const S {};
      ^
error: 2: interface block 'testBlock' must contain at least one field
testBlock {} x[2];
^^^^^^^^^
2 errors
